# pipeline-data-league-legends

./: .env.example  .gitignore  Dockerfile  Dockerfile_dagster  Dockerfile_superset  Dockerfile_user_code  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  requirements.txt  workspace.yaml
.claude/: CLAUDE.md
.claude/agents/: debugger.md
dagster_lol/: __init__.py  jobs.py
dagster_lol/assets/: __init__.py  gold.py
dagster_lol/assets/bronze/: __init__.py  health_check.py  leaguepedia.py  lolpros.py  riot.py  utils.py
dagster_lol/assets/silver/: __init__.py  checks.py  leaguepedia.py  riot.py  transform.py
dagster_lol/assets/silver/contracts/: player_soloqueue_accounts.yaml  players.yaml  tournament_rosters.yaml  tournaments.yaml
dagster_lol/ressources/: __init__.py  leaguepedia.py  riot.py  s3.py  snowflake.py
dbt_gold_layer/: dbt_project.yml  profiles.yml  snowflake_setup.sql
dbt_gold_layer/models/: sources.yml
dbt_gold_layer/models/gold/: lec_last_rosters.sql  lec_soloq_accounts.sql  tournaments.sql
migrations/snowflake/: create_silver_leaguepedia_player_soloqueue_accounts.sql  create_silver_leaguepedia_players.sql  create_silver_leaguepedia_tournament_rosters.sql  create_silver_leaguepedia_tournaments.sql  create_silver_riot_match.sql  create_silver_riot_match_participants.sql  create_silver_riot_player_rankings.sql  create_silver_riot_teams.sql
superset/: snowflake_import.py  superset_config.py  superset_init.sh
tests/: conftest.py
tests/bronze/: test_leaguepedia.py
tests/silver/: test_leaguepedia.py  test_transform.py
(+9 files in other folders)
