[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster_lol"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-webserver",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dagster_lol*"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.dagster]
module_name = "dagster_lol"